@@ -1,8 +1,8 @@
 Package: DescTools
 Type: Package
 Title: Tools for Descriptive Statistics
-Version: 0.99.59.5
-Date: 2025-02-25
+Version: 0.99.59.6
+Date: 2025-03-06
 Authors@R: c(
   person(given="Andri", family="Signorell", 
          email = "andri@signorell.net", 
