@@ -10,6 +10,10 @@ NEW FUNCTIONS ADDED:
 UPDATED FUNCTIONS:
   * FisherZ() and FisherZInv() use atanh(), resp. tanh() now.
     (Credits to Daniel Wollschlaeger)
+  * Year(), Week(), YearWeek() have been recoded in C++ and run now
+    4-10 times faster.
+  * Format() gets two new predefined formats for displaying confidence 
+    intervals, fmt="ci" and fmt="ci%".
 
 BUGFIXES:
   * ...
@@ -43,7 +47,8 @@ DescTools 0.99.58 (2024-11-10)
 
 NEW FUNCTIONS ADDED:
   * ReadSPSS() converts SPSS data in a data.frame.
-  * AppendRowNames() shortcut to append rownames to a data.frame.
+  * AppendRowNames() shortcut to append rownames as a new column
+    to a data.frame.
 
 UPDATED FUNCTIONS:
   * CourseData() finds more files now.
